--- a/BIDSSMemLib.Variable/BIDSSMemLib.Variable.csproj
+++ b/BIDSSMemLib.Variable/BIDSSMemLib.Variable.csproj
@@ -10,11 +10,9 @@
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\TR.SMemIF\TR.SMemIF.csproj" />
-		<ProjectReference Include="..\TR.ISMemCtrler\TR.ISMemCtrler.csproj" />
-		<ProjectReference Include="..\TR.SMemCtrler.AutoReadSupporter\TR.SMemCtrler.AutoReadSupporter.csproj" />
-	</ItemGroup>
-	<ItemGroup>
 		<PackageReference Include="BIDS.Parser.Variable" Version="1.3.0" />
+		<PackageReference Include="TR.SMemIF" Version="2.0.0.1" />
+		<PackageReference Include="TR.ISMemCtrler" Version="1.1.0.1" />
+		<PackageReference Include="TR.SMemCtrler.AutoReadSupporter" Version="1.1.0.1" />
 	</ItemGroup>
 </Project>
