--- a/BIDSSMemLib.Variable/BIDSSMemLib.Variable.csproj
+++ b/BIDSSMemLib.Variable/BIDSSMemLib.Variable.csproj
@@ -10,9 +10,11 @@
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="BIDS.Parser.Variable" Version="1.3.0" />
 		<PackageReference Include="TR.SMemIF" Version="2.0.0.1" />
 		<PackageReference Include="TR.ISMemCtrler" Version="1.1.0.1" />
 		<PackageReference Include="TR.SMemCtrler.AutoReadSupporter" Version="1.1.0.1" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\BIDS.Parser.Variable\BIDS.Parser.Variable.csproj" />
 	</ItemGroup>
 </Project>
