--- a/VariableSMemMonitor.Core/VariableSMemMonitor.Core.csproj
+++ b/VariableSMemMonitor.Core/VariableSMemMonitor.Core.csproj
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFrameworks>net6.0;netstandard2.0;netstandard2.1</TargetFrameworks>
+		<LangVersion>10</LangVersion>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<ItemGroup>
