新規追加したプロジェクトをWorkflowに追加

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -19,6 +19,7 @@ jobs:
         project:
           - BIDS.Parser.Variable.Tests
           - BIDSSMemLib.Variable.Tests
+          - VariableSMemMonitor.Core.Tests
         os:
           - ubuntu-latest
           - windows-latest
