--- a/.github/workflows/publish-to-nuget.yml
+++ b/.github/workflows/publish-to-nuget.yml
@@ -11,6 +11,7 @@ on:
         options:
           - BIDS.Parser.Variable
           - BIDSSMemLib.Variable
+          - VariableSMemMonitor.Core
 
 jobs:
   build:
