--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -29,9 +29,15 @@ jobs:
           - net6.0
         include:
           - project: BIDS.Parser.Variable.Tests
+            os:
+              - ubuntu-latest
+              - windows-latest
             dotnet-version: '3.1.x'
             framework: netcoreapp3.1
           - project: BIDS.Parser.Variable.Tests
+            os:
+              - ubuntu-latest
+              - windows-latest
             dotnet-version: '2.1.x'
             framework: netcoreapp2.1
           - project: BIDS.Parser.Variable.Tests
