--- a/VariableSMemMonitor.Core.Tests/VariableSMemMonitor.Core.Tests.csproj
+++ b/VariableSMemMonitor.Core.Tests/VariableSMemMonitor.Core.Tests.csproj
@@ -19,6 +19,10 @@
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 		<PackageReference Include="TR.SMemIF.Mock" Version="1.1.0.1" />
+		<PackageReference Include="coverlet.msbuild" Version="3.2.0">
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		  <PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\VariableSMemMonitor.Core\VariableSMemMonitor.Core.csproj" />
